added the back arrow inside the recipe pages which links back to the index page

--- a/recipes/broccoli_cauliflower_casserole.html
+++ b/recipes/broccoli_cauliflower_casserole.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <a href="../index.html" style="float: right;">
+        <img src="https://img.icons8.com/?size=50&id=26194&format=png" alt="go back to home" height="40">
+    </a>
     <h1><u>Broccoli Cauliflower Casserole Recipe</u></h1>
     <img src="https://www.allrecipes.com/thmb/rX6JdTRrTMFsD9J7Bn_eptMfRCs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/234281-broccoli-cauliflower-casserole-ddmfs-4X3-1313-103a06259d6344c996c112fc431c977d.jpg"
         alt="Broccoli Cauliflower Casserole" height="400" width="600">
