--- a/recipes/one_pan_orecchiette_pasta.html
+++ b/recipes/one_pan_orecchiette_pasta.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <a href="../index.html" style="float: right;">
+        <img src="https://img.icons8.com/?size=50&id=26194&format=png" alt="go back to home" height="40">
+    </a>
     <h1><u>One Pan Orecchiette Pasta Recipe</u></h1>
     <img src="https://www.allrecipes.com/thmb/8wm0xH4I0swyR-U5LG8bm5Mcsys=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4541124-eaedf7a106ba4a6dbf04aaa4810f1ba3.jpg"
         alt="One Pan Orecchiette Pasta" height="400" width="600">
