--- a/recipes/baked_ziti.html
+++ b/recipes/baked_ziti.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+    <a href="../index.html" style="float: right;">
+        <img src="https://img.icons8.com/?size=50&id=26194&format=png" alt="go back to home" height="40">
+    </a>
     <h1><u>Baked Ziti Recipe</u></h1>
     <img src="https://www.allrecipes.com/thmb/VUjF0WqLJFUQKCnOItM7mMlk-LE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4557541-21604073f2774e89b532193821d6cd9c.jpg"
         alt="Baked Ziti" height="400" width="600">
